<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/bg_all"
                  android:orientation="vertical">

        <include layout="@layout/include_title"/>

        <LinearLayout style="@style/linear_layout_horizontal_recharge">

            <TextView style="@style/text_view"
                      android:text="@string/use_cash_money"
                      android:textColor="@color/font_black"
                      android:textSize="14sp"/>

            <TextView android:id="@+id/tv_money"
                      style="@style/text_view"
                      android:layout_marginLeft="20dp"
                      android:text="--"
                      android:textColor="@color/font_golden"
                      android:textSize="18sp"/>

        </LinearLayout>

        <RelativeLayout style="@style/linear_layout_horizontal_recharge"
                        android:layout_marginTop="2dp">

            <TextView android:id="@+id/tv_cash_money"
                      style="@style/text_view"
                      android:text="@string/cash_money"
                      android:textColor="@color/font_black"
                      android:textSize="14sp"/>

            <EditText android:id="@+id/et_input_money"
                      style="@style/edittext"
                      android:layout_marginLeft="35dp"
                      android:layout_toRightOf="@id/tv_cash_money"
                      android:background="@null"
                      android:hint="@string/input_cach_money"
                      android:inputType="numberDecimal"
                      android:maxLength="11"
                      android:maxLines="1"
                      android:textSize="14sp"/>

            <TextView style="@style/text_view"
                      android:layout_alignParentRight="true"
                      android:layout_centerVertical="true"
                      android:layout_marginRight="55dp"
                      android:text="元"
                      android:textColor="@color/font_black"/>

        </RelativeLayout>

        <RelativeLayout style="@style/linear_layout_horizontal_recharge"
                        android:layout_marginTop="2dp">

            <TextView android:id="@+id/tv_pay_pwd"
                      style="@style/text_view"
                      android:text="@string/account_payment_pwd"
                      android:textColor="@color/font_black"
                      android:textSize="14sp"/>

            <EditText android:id="@+id/et_input_pwd"
                      style="@style/edittext"
                      android:layout_marginLeft="35dp"
                      android:layout_toRightOf="@id/tv_pay_pwd"
                      android:background="@null"
                      android:hint="@string/input_payment_pwd"
                      android:inputType="textPassword"
                      android:maxLength="20"
                      android:maxLines="1"
                      android:textSize="14sp"/>

            <TextView android:id="@+id/tv_forget_pwd"
                      style="@style/text_view"
                      android:layout_alignParentRight="true"
                      android:layout_centerVertical="true"
                      android:layout_marginRight="5dp"
                      android:text="@string/forget_pay_pwd"
                      android:textColor="@color/font_golden"/>

        </RelativeLayout>

        <View android:layout_width="match_parent"
              android:layout_height="2dp"
              android:background="@color/view_line"/>

        <LinearLayout style="@style/linear_layout_vertical"
                      android:layout_height="match_parent"
                      android:background="@color/bg_white">

            <Button android:id="@+id/btn_cash"
                    style="@style/button_reg"
                    android:layout_marginTop="25dp"
                    android:text="@string/confirm_cash"/>

            <TextView style="@style/text_view"
                      android:layout_marginBottom="10dp"
                      android:layout_marginLeft="25dp"
                      android:layout_marginTop="30dp"
                      android:text="@string/fee"
                      android:textColor="@color/font_golden"
                      android:textSize="14sp"/>

            <TextView android:id="@+id/tv_counter_fee_explain"
                      style="@style/text_view"
                      android:layout_marginLeft="25dp"
                      android:lineSpacingExtra="3dp"
                      android:textColor="@color/font_light_black"
                      android:textSize="12sp"/>

            <TextView style="@style/text_view"
                      android:layout_marginBottom="10dp"
                      android:layout_marginLeft="25dp"
                      android:layout_marginTop="10dp"
                      android:text="@string/prompt"
                      android:textColor="@color/font_golden"
                      android:textSize="14sp"/>

            <TextView style="@style/text_view"
                      android:layout_marginLeft="25dp"
                      android:lineSpacingExtra="3dp"
                      android:text="@string/prompt_explain"
                      android:textColor="@color/font_light_black"
                      android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

    <include android:id="@+id/waiting_view"
             layout="@layout/waiting_view_loading"
             android:visibility="gone"/>

</RelativeLayout>