<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include android:id="@+id/waiting_view"
             layout="@layout/waiting_view_loading"
             android:visibility="gone"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/waiting_view"
                android:layout_toEndOf="@+id/waiting_view">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@mipmap/login_bg"
                      android:orientation="vertical">

            <ImageView style="@style/image_view"
                       android:layout_height="170dp"
                       android:layout_gravity="center"
                       android:layout_marginTop="50dp"
                       android:src="@mipmap/login_txt"/>

            <EditText android:id="@+id/et_input_phone"
                      style="@style/edittext_login"
                      android:layout_marginTop="20dp"
                      android:hint="@string/input_mobile"
                      android:inputType="phone"/>

            <RelativeLayout style="@style/relative_layout"
                            android:layout_marginTop="10dp">

                <EditText android:id="@+id/et_input_pwd"
                          style="@style/edittext_login"
                          android:hint="@string/input_pwd"
                          android:inputType="textPassword"
                          android:maxLength="16"/>

                <ImageView android:id="@+id/iv_hidden"
                           style="@style/image_view"
                           android:layout_alignParentRight="true"
                           android:layout_centerVertical="true"
                           android:layout_marginRight="50dp"
                           android:contentDescription="@null"
                           android:src="@mipmap/pwd_hidden"/>

            </RelativeLayout>

            <CheckBox android:id="@+id/cb_remember_pwd"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="25dp"
                      android:layout_marginTop="20dp"
                      android:button="@drawable/selector_cb_login"
                      android:checked="false"
                      android:paddingLeft="5dp"
                      android:text="@string/remember_username"
                      android:textColor="@color/font_white"
                      android:textSize="14sp"/>

            <Button android:id="@+id/btn_login"
                    style="@style/button"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_btn_login"
                    android:text="@string/login"
                    android:textColor="@color/font_white"
                    android:textSize="16sp"/>

            <RelativeLayout style="@style/relative_layout"
                            android:layout_marginTop="25dp"
                            android:paddingLeft="25dp"
                            android:paddingRight="25dp">

                <TextView android:id="@+id/tv_forget_pwd"
                          style="@style/text_view"
                          android:layout_alignParentLeft="true"
                          android:text="@string/forget_pwd"
                          android:textColor="@color/font_white"
                          android:textSize="16sp"/>

                <TextView android:id="@+id/tv_register"
                          style="@style/text_view"
                          android:layout_alignParentRight="true"
                          android:text="@string/register"
                          android:textColor="@color/font_white"
                          android:textSize="16sp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>